--- a/.gitconfig
+++ b/.gitconfig
@@ -45,14 +45,7 @@
 
     merge-this = "!~/.git-aliases/merge-this/script.sh"
     
-    branch-d-both = "!cd "${GIT_PREFIX:-.}"; f() {  \
-        if [ $# -eq 1 ]; then                       \
-            git branch -d \"$1\"                    \
-                && git push -d origin \"$1\";       \
-        else                                        \
-            echo Invalid parameters;                \
-        fi;                                         \
-    }; f"
+    branch-d-both = "!~/.git-aliases/branch-d-both/script.sh"
 
     get-deleted-branch = "!cd "${GIT_PREFIX:-.}"; f() {         \
         if [ $# -eq 1 ]; then                                   \
