--- a/.gitconfig
+++ b/.gitconfig
@@ -47,16 +47,7 @@
     
     branch-d-both = "!~/.git-aliases/branch-d-both/script.sh"
 
-    get-deleted-branch = "!cd "${GIT_PREFIX:-.}"; f() {         \
-        if [ $# -eq 1 ]; then                                   \
-            commit_subject=$(git log --format=%s -n 1 \"$1\")   \
-                && branch_name=$(grep -Po \"(?<=')[^']+(?=')\" <<< \"$commit_subject\" | head -1) \
-                && git checkout -b \"$branch_name\" \"$1^2\"    \
-                && git checkout -;                              \
-        else                                                    \
-            echo Invalid parameters;                            \
-        fi;                                                     \
-    }; f"
+    get-deleted-branch = "!~/.git-aliases/.helper_functions/get-deleted-branch/script.sh"
 
     unmerge = "!~/.git-aliases/unmerge/script.sh"
 
