--- a/.gitconfig
+++ b/.gitconfig
@@ -17,7 +17,7 @@
     git = "!~/.git-aliases/git/script.sh"
     get-current-branch = rev-parse --abbrev-ref HEAD
     get-current-hash = rev-parse HEAD
-    branch-exists = "!cd "${GIT_PREFIX:-.}"; f() { git show-ref --quiet \"refs/heads/$1\"; }; f"
+    branch-exists = "!~/.git-aliases/.helper_functions/branch-exists/script.sh"
     is-ancestor = "!~/.git-aliases/.helper_functions/is-ancestor/script.sh"
     is-rebasing = "!~/.git-aliases/.helper_functions/is-rebasing/script.sh"
     is-merging = "!~/.git-aliases/.helper_functions/is-merging/script.sh"
