--- a/.gitconfig
+++ b/.gitconfig
@@ -21,7 +21,7 @@
     is-ancestor = "!~/.git-aliases/.helper_functions/is-ancestor/script.sh"
     is-rebasing = "!~/.git-aliases/.helper_functions/is-rebasing/script.sh"
     is-merging = "!~/.git-aliases/.helper_functions/is-merging/script.sh"
-    is-cherry-picking = "!f() { test -e .git/CHERRY_PICK_HEAD; }; f"
+    is-cherry-picking = "!~/.git-aliases/.helper_functions/is-cherry-picking/script.sh"
     is-reverting = "!f() { test -e .git/REVERT_HEAD; }; f"
     has-unmerged = "!f() { git ls-files --unmerged | grep -q .; }; f"
 
