Modularise 'get-current-hash' helper alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,7 +16,7 @@
     addn = "!~/.git-aliases/addn/script.sh"
     git = "!~/.git-aliases/git/script.sh"
     get-current-branch = "!~/.git-aliases/.helper_functions/get-current-branch/script.sh"
-    get-current-hash = rev-parse HEAD
+    get-current-hash = "!~/.git-aliases/.helper_functions/get-current-hash/script.sh"
     branch-exists = "!~/.git-aliases/.helper_functions/branch-exists/script.sh"
     is-ancestor = "!~/.git-aliases/.helper_functions/is-ancestor/script.sh"
     is-rebasing = "!~/.git-aliases/.helper_functions/is-rebasing/script.sh"
