--- a/.gitconfig
+++ b/.gitconfig
@@ -33,26 +33,7 @@
     
     link = "!~/.git-aliases/link/script.sh"
     
-    clone-nonempty = "!cd "${GIT_PREFIX:-.}"; f() { \
-        if [ $# -eq 2 ] && [ $1 != "-f" ]; then     \
-            mkdir -p \"$2\"                         \
-                && cd \"$2\"                        \
-                && git init                         \
-                && git remote add origin \"$1\"     \
-                && git fetch                        \
-                && git checkout -t origin/master;   \
-        elif [ $# -eq 3 ] && [ $1 == "-f" ]; then   \
-            mkdir -p \"$3\"                         \
-                && cd \"$3\"                        \
-                && rm -drf .git                     \
-                && git init                         \
-                && git remote add origin \"$2\"     \
-                && git fetch                        \
-                && git checkout -tf origin/master;  \
-        else                                        \
-            echo Invalid parameters;                \
-        fi;                                         \
-    }; f"
+    clone-nonempty = "!~/.git-aliases/clone-nonempty/script.sh"
     
     stash-unstaged = "!cd "${GIT_PREFIX:-.}"; f() {     \
         git commit --quiet -m \"TEMP (staged changes)\" \
