--- a/.gitconfig
+++ b/.gitconfig
@@ -7,45 +7,45 @@
 [rebase]
 	autosquash = true
 [alias]
-    ab = "!~/.git-aliases/ab/script.sh"
-    addn = "!~/.git-aliases/addn/script.sh"
-    branch-d-both = "!~/.git-aliases/branch-d-both/script.sh"
-    cane = "!~/.git-aliases/cane/script.sh"
-    clone-nonempty = "!~/.git-aliases/clone-nonempty/script.sh"
-    con = "!~/.git-aliases/con_/script.sh"  # Suffixed with "_" as Windows folder name can't be "con".
-    cone = "!~/.git-aliases/cone/script.sh"
-    conea = "!~/.git-aliases/conea/script.sh"
-    cum = "!~/.git-aliases/cum/script.sh"
-    cumane = "!~/.git-aliases/cumane/script.sh"
-    dump = "!~/.git-aliases/dump/script.sh"
-    git = "!~/.git-aliases/git/script.sh"
-    link = "!~/.git-aliases/link/script.sh"
-    merge-this = "!~/.git-aliases/merge-this/script.sh"
-    pop = "!~/.git-aliases/pop/script.sh"
-    pull-all = "!~/.git-aliases/pull-all/script.sh"
-    pull-force = "!~/.git-aliases/pull-force/script.sh"
-    re = "!~/.git-aliases/re/script.sh"
-    rebase-from = "!~/.git-aliases/rebase-from/script.sh"
-    rebase-preserve = "!~/.git-aliases/rebase-preserve/script.sh"
-    rebun = "!~/.git-aliases/rebun/script.sh"
-    replace-with = "!~/.git-aliases/replace-with/script.sh"
-    spoof-dates = "!~/.git-aliases/spoof-dates/script.sh"
-    st = "!~/.git-aliases/st/script.sh"
-    stash-staged = "!~/.git-aliases/stash-staged/script.sh"
-    stash-unstaged = "!~/.git-aliases/stash-unstaged/script.sh"
-    undoc = "!~/.git-aliases/undoc/script.sh"
-    unmerge = "!~/.git-aliases/unmerge/script.sh"
+    ab = "!./.git-aliases/ab/script.sh"
+    addn = "!./.git-aliases/addn/script.sh"
+    branch-d-both = "!./.git-aliases/branch-d-both/script.sh"
+    cane = "!./.git-aliases/cane/script.sh"
+    clone-nonempty = "!./.git-aliases/clone-nonempty/script.sh"
+    con = "!./.git-aliases/con_/script.sh"  # Suffixed with "_" as Windows folder name can't be "con".
+    cone = "!./.git-aliases/cone/script.sh"
+    conea = "!./.git-aliases/conea/script.sh"
+    cum = "!./.git-aliases/cum/script.sh"
+    cumane = "!./.git-aliases/cumane/script.sh"
+    dump = "!./.git-aliases/dump/script.sh"
+    git = "!./.git-aliases/git/script.sh"
+    link = "!./.git-aliases/link/script.sh"
+    merge-this = "!./.git-aliases/merge-this/script.sh"
+    pop = "!./.git-aliases/pop/script.sh"
+    pull-all = "!./.git-aliases/pull-all/script.sh"
+    pull-force = "!./.git-aliases/pull-force/script.sh"
+    re = "!./.git-aliases/re/script.sh"
+    rebase-from = "!./.git-aliases/rebase-from/script.sh"
+    rebase-preserve = "!./.git-aliases/rebase-preserve/script.sh"
+    rebun = "!./.git-aliases/rebun/script.sh"
+    replace-with = "!./.git-aliases/replace-with/script.sh"
+    spoof-dates = "!./.git-aliases/spoof-dates/script.sh"
+    st = "!./.git-aliases/st/script.sh"
+    stash-staged = "!./.git-aliases/stash-staged/script.sh"
+    stash-unstaged = "!./.git-aliases/stash-unstaged/script.sh"
+    undoc = "!./.git-aliases/undoc/script.sh"
+    unmerge = "!./.git-aliases/unmerge/script.sh"
 
 
     # Helper functions.
-    branch-exists = "!~/.git-aliases/.helper_functions/branch-exists/script.sh"
-    get-current-branch = "!~/.git-aliases/.helper_functions/get-current-branch/script.sh"
-    get-current-hash = "!~/.git-aliases/.helper_functions/get-current-hash/script.sh"
-    get-in-prog-cmd = "!~/.git-aliases/.helper_functions/get-in-prog-cmd/script.sh"
-    has-unmerged = "!~/.git-aliases/.helper_functions/has-unmerged/script.sh"
-    is-ancestor = "!~/.git-aliases/.helper_functions/is-ancestor/script.sh"
-    is-cherry-picking = "!~/.git-aliases/.helper_functions/is-cherry-picking/script.sh"
-    is-merging = "!~/.git-aliases/.helper_functions/is-merging/script.sh"
-    is-rebasing = "!~/.git-aliases/.helper_functions/is-rebasing/script.sh"
-    is-reverting = "!~/.git-aliases/.helper_functions/is-reverting/script.sh"
-    restore-deleted-branch = "!~/.git-aliases/.helper_functions/restore-deleted-branch/script.sh"
+    branch-exists = "!./.git-aliases/.helper_functions/branch-exists/script.sh"
+    get-current-branch = "!./.git-aliases/.helper_functions/get-current-branch/script.sh"
+    get-current-hash = "!./.git-aliases/.helper_functions/get-current-hash/script.sh"
+    get-in-prog-cmd = "!./.git-aliases/.helper_functions/get-in-prog-cmd/script.sh"
+    has-unmerged = "!./.git-aliases/.helper_functions/has-unmerged/script.sh"
+    is-ancestor = "!./.git-aliases/.helper_functions/is-ancestor/script.sh"
+    is-cherry-picking = "!./.git-aliases/.helper_functions/is-cherry-picking/script.sh"
+    is-merging = "!./.git-aliases/.helper_functions/is-merging/script.sh"
+    is-rebasing = "!./.git-aliases/.helper_functions/is-rebasing/script.sh"
+    is-reverting = "!./.git-aliases/.helper_functions/is-reverting/script.sh"
+    restore-deleted-branch = "!./.git-aliases/.helper_functions/restore-deleted-branch/script.sh"
