Change relative '.git_aliases' path back to absolute

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,45 +7,45 @@
 [rebase]
 	autosquash = true
 [alias]
-    ab = "!./.git_aliases/ab/script.sh"
-    addn = "!./.git_aliases/addn/script.sh"
-    branch-d-both = "!./.git_aliases/branch-d-both/script.sh"
-    cane = "!./.git_aliases/cane/script.sh"
-    clone-nonempty = "!./.git_aliases/clone-nonempty/script.sh"
-    con = "!./.git_aliases/con_/script.sh"  # Suffixed with "_" as Windows folder name can't be "con".
-    cone = "!./.git_aliases/cone/script.sh"
-    conea = "!./.git_aliases/conea/script.sh"
-    cum = "!./.git_aliases/cum/script.sh"
-    cumane = "!./.git_aliases/cumane/script.sh"
-    dump = "!./.git_aliases/dump/script.sh"
-    git = "!./.git_aliases/git/script.sh"
-    link = "!./.git_aliases/link/script.sh"
-    merge-this = "!./.git_aliases/merge-this/script.sh"
-    pop = "!./.git_aliases/pop/script.sh"
-    pull-all = "!./.git_aliases/pull-all/script.sh"
-    pull-force = "!./.git_aliases/pull-force/script.sh"
-    re = "!./.git_aliases/re/script.sh"
-    rebase-from = "!./.git_aliases/rebase-from/script.sh"
-    rebase-preserve = "!./.git_aliases/rebase-preserve/script.sh"
-    rebun = "!./.git_aliases/rebun/script.sh"
-    replace-with = "!./.git_aliases/replace-with/script.sh"
-    spoof-dates = "!./.git_aliases/spoof-dates/script.sh"
-    st = "!./.git_aliases/st/script.sh"
-    stash-staged = "!./.git_aliases/stash-staged/script.sh"
-    stash-unstaged = "!./.git_aliases/stash-unstaged/script.sh"
-    undoc = "!./.git_aliases/undoc/script.sh"
-    unmerge = "!./.git_aliases/unmerge/script.sh"
+    ab = "!~/.git_aliases/ab/script.sh"
+    addn = "!~/.git_aliases/addn/script.sh"
+    branch-d-both = "!~/.git_aliases/branch-d-both/script.sh"
+    cane = "!~/.git_aliases/cane/script.sh"
+    clone-nonempty = "!~/.git_aliases/clone-nonempty/script.sh"
+    con = "!~/.git_aliases/con_/script.sh"  # Suffixed with "_" as Windows folder name can't be "con".
+    cone = "!~/.git_aliases/cone/script.sh"
+    conea = "!~/.git_aliases/conea/script.sh"
+    cum = "!~/.git_aliases/cum/script.sh"
+    cumane = "!~/.git_aliases/cumane/script.sh"
+    dump = "!~/.git_aliases/dump/script.sh"
+    git = "!~/.git_aliases/git/script.sh"
+    link = "!~/.git_aliases/link/script.sh"
+    merge-this = "!~/.git_aliases/merge-this/script.sh"
+    pop = "!~/.git_aliases/pop/script.sh"
+    pull-all = "!~/.git_aliases/pull-all/script.sh"
+    pull-force = "!~/.git_aliases/pull-force/script.sh"
+    re = "!~/.git_aliases/re/script.sh"
+    rebase-from = "!~/.git_aliases/rebase-from/script.sh"
+    rebase-preserve = "!~/.git_aliases/rebase-preserve/script.sh"
+    rebun = "!~/.git_aliases/rebun/script.sh"
+    replace-with = "!~/.git_aliases/replace-with/script.sh"
+    spoof-dates = "!~/.git_aliases/spoof-dates/script.sh"
+    st = "!~/.git_aliases/st/script.sh"
+    stash-staged = "!~/.git_aliases/stash-staged/script.sh"
+    stash-unstaged = "!~/.git_aliases/stash-unstaged/script.sh"
+    undoc = "!~/.git_aliases/undoc/script.sh"
+    unmerge = "!~/.git_aliases/unmerge/script.sh"
 
 
     # Helper functions.
-    branch-exists = "!./.git_aliases/.helper_functions/branch-exists/script.sh"
-    get-current-branch = "!./.git_aliases/.helper_functions/get-current-branch/script.sh"
-    get-current-hash = "!./.git_aliases/.helper_functions/get-current-hash/script.sh"
-    get-in-prog-cmd = "!./.git_aliases/.helper_functions/get-in-prog-cmd/script.sh"
-    has-unmerged = "!./.git_aliases/.helper_functions/has-unmerged/script.sh"
-    is-ancestor = "!./.git_aliases/.helper_functions/is-ancestor/script.sh"
-    is-cherry-picking = "!./.git_aliases/.helper_functions/is-cherry-picking/script.sh"
-    is-merging = "!./.git_aliases/.helper_functions/is-merging/script.sh"
-    is-rebasing = "!./.git_aliases/.helper_functions/is-rebasing/script.sh"
-    is-reverting = "!./.git_aliases/.helper_functions/is-reverting/script.sh"
-    restore-deleted-branch = "!./.git_aliases/.helper_functions/restore-deleted-branch/script.sh"
+    branch-exists = "!~/.git_aliases/.helper_functions/branch-exists/script.sh"
+    get-current-branch = "!~/.git_aliases/.helper_functions/get-current-branch/script.sh"
+    get-current-hash = "!~/.git_aliases/.helper_functions/get-current-hash/script.sh"
+    get-in-prog-cmd = "!~/.git_aliases/.helper_functions/get-in-prog-cmd/script.sh"
+    has-unmerged = "!~/.git_aliases/.helper_functions/has-unmerged/script.sh"
+    is-ancestor = "!~/.git_aliases/.helper_functions/is-ancestor/script.sh"
+    is-cherry-picking = "!~/.git_aliases/.helper_functions/is-cherry-picking/script.sh"
+    is-merging = "!~/.git_aliases/.helper_functions/is-merging/script.sh"
+    is-rebasing = "!~/.git_aliases/.helper_functions/is-rebasing/script.sh"
+    is-reverting = "!~/.git_aliases/.helper_functions/is-reverting/script.sh"
+    restore-deleted-branch = "!~/.git_aliases/.helper_functions/restore-deleted-branch/script.sh"
