--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
     cum = "!~/.git_aliases/cum/script.sh"
     cumane = "!~/.git_aliases/cumane/script.sh"
     dump = "!~/.git_aliases/dump/script.sh"
+    f = "!~/.git_aliases/f/script.sh"
     git = "!~/.git_aliases/git/script.sh"
     link = "!~/.git_aliases/link/script.sh"
     merge-this = "!~/.git_aliases/merge-this/script.sh"
