--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
     conea = "!~/.git_aliases/conea/script.sh"
     cum = "!~/.git_aliases/cum/script.sh"
     cumane = "!~/.git_aliases/cumane/script.sh"
+    delete-this = "!~/.git_aliases/delete-this/script.sh"
     dump = "!~/.git_aliases/dump/script.sh"
     f = "!~/.git_aliases/f/script.sh"
     ff = "!~/.git_aliases/ff/script.sh"
