--- a/.gitconfig
+++ b/.gitconfig
@@ -27,6 +27,7 @@
     pop = "!~/.git_aliases/pop/script.sh"
     pull-all = "!~/.git_aliases/pull-all/script.sh"
     pull-force = "!~/.git_aliases/pull-force/script.sh"
+    pull-pr = "!~/.git_aliases/pull-pr/script.sh"
     re = "!~/.git_aliases/re/script.sh"
     rebase-from = "!~/.git_aliases/rebase-from/script.sh"
     rebase-preserve = "!~/.git_aliases/rebase-preserve/script.sh"
