--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
 	editor = \"$LOCALAPPDATA\\Programs\\Microsoft VS Code\\bin\\code\" --wait
-	autocrlf = true
+	autocrlf = input
 [user]
 	email = shauntanzongzhi@gmail.com
 	name = EvitanRelta
