--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-	editor = \"$LOCALAPPDATA\\Programs\\Microsoft VS Code\\bin\\code\" --wait
+	editor = "~/.git_aliases/.git_editor.sh"
 	autocrlf = input
 [user]
 	email = shauntanzongzhi@gmail.com
