Add 'show-stopped' alias & 'get-stopped-hash' helper

--- a/.gitconfig
+++ b/.gitconfig
@@ -34,6 +34,7 @@
     rebase-preserve = "!~/.git_aliases/rebase-preserve/script.sh"
     rebun = "!~/.git_aliases/rebun/script.sh"
     replace-with = "!~/.git_aliases/replace-with/script.sh"
+    show-stopped = "!~/.git_aliases/show-stopped/script.sh"
     spoof-dates = "!~/.git_aliases/spoof-dates/script.sh"
     st = "!~/.git_aliases/st/script.sh"
     stash-staged = "!~/.git_aliases/stash-staged/script.sh"
@@ -47,6 +48,7 @@
     get-current-branch = "!~/.git_aliases/.helper_functions/get-current-branch/script.sh"
     get-current-hash = "!~/.git_aliases/.helper_functions/get-current-hash/script.sh"
     get-in-prog-cmd = "!~/.git_aliases/.helper_functions/get-in-prog-cmd/script.sh"
+    get-stopped-hash = "!~/.git_aliases/.helper_functions/get-stopped-hash/script.sh"
     has-unmerged = "!~/.git_aliases/.helper_functions/has-unmerged/script.sh"
     is-ancestor = "!~/.git_aliases/.helper_functions/is-ancestor/script.sh"
     is-cherry-picking = "!~/.git_aliases/.helper_functions/is-cherry-picking/script.sh"
