--- a/.gitconfig
+++ b/.gitconfig
@@ -12,6 +12,7 @@
     branch-d-both = "!~/.git_aliases/branch-d-both/script.sh"
     cane = "!~/.git_aliases/cane/script.sh"
     clone-nonempty = "!~/.git_aliases/clone-nonempty/script.sh"
+    code-unmerged = "!~/.git_aliases/code-unmerged/script.sh"
     con = "!~/.git_aliases/con_/script.sh"  # Suffixed with "_" as Windows folder name can't be "con".
     cone = "!~/.git_aliases/cone/script.sh"
     conea = "!~/.git_aliases/conea/script.sh"
