--- a/.gitconfig
+++ b/.gitconfig
@@ -50,6 +50,7 @@
     get-current-hash = "!~/.git_aliases/.helper_functions/get-current-hash/script.sh"
     get-in-prog-cmd = "!~/.git_aliases/.helper_functions/get-in-prog-cmd/script.sh"
     get-stopped-hash = "!~/.git_aliases/.helper_functions/get-stopped-hash/script.sh"
+    get-unmerged-paths = "!~/.git_aliases/.helper_functions/get-unmerged-paths/script.sh"
     has-unmerged = "!~/.git_aliases/.helper_functions/has-unmerged/script.sh"
     is-ancestor = "!~/.git_aliases/.helper_functions/is-ancestor/script.sh"
     is-cherry-picking = "!~/.git_aliases/.helper_functions/is-cherry-picking/script.sh"
