Add 'redoc' alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -35,6 +35,7 @@
     rebase-preserve = "!~/.git_aliases/rebase-preserve/script.sh"
     rebun = "!~/.git_aliases/rebun/script.sh"
     replace-with = "!~/.git_aliases/replace-with/script.sh"
+    redoc = "!~/.git_aliases/redoc/script.sh"
     show-stopped = "!~/.git_aliases/show-stopped/script.sh"
     show-stopped-unmerged = "!~/.git_aliases/show-stopped-unmerged/script.sh"
     spoof-dates = "!~/.git_aliases/spoof-dates/script.sh"
