Replace 'replace-with' alias with 'replace-this' & 'replace-that'

--- a/.gitconfig
+++ b/.gitconfig
@@ -36,7 +36,8 @@
     rebase-preserve = "!~/.git_aliases/rebase-preserve/script.sh"
     rebun = "!~/.git_aliases/rebun/script.sh"
     redoc = "!~/.git_aliases/redoc/script.sh"
-    replace-with = "!~/.git_aliases/replace-with/script.sh"
+    replace-that = "!~/.git_aliases/replace-that/script.sh"
+    replace-this = "!~/.git_aliases/replace-this/script.sh"
     show-stopped = "!~/.git_aliases/show-stopped/script.sh"
     show-stopped-unmerged = "!~/.git_aliases/show-stopped-unmerged/script.sh"
     spoof-dates = "!~/.git_aliases/spoof-dates/script.sh"
